--- a/index.htm
+++ b/index.htm
@@ -7,10 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <! bootstrap css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+<! -- font awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+  crossorigin="anonymous">
 <!-- main css -->
   <link rel="stylesheet" href="css/main.css">
-<! -- font awesome -->
-  <script src="js/all.js"></script>
+
   <title>Rocky Gap Virginia</title>
 </head>
 
@@ -240,6 +243,8 @@
   <script src="js/jquery-3.3.1.min.js"></script>
 <!-- bootstrap js --> 
   <script src="js/bootstrap.bundle.min.js"></script>
-<!-- script js --> 
+<!-- font awesome --> 
+  <script src="js/all.js"></script>
+     
 </body>
 </html>
