--- a/index.htm
+++ b/index.htm
@@ -240,11 +240,11 @@
 </footer>
 
 <! -- jquery -->
-  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="JS/jquery-3.3.1.min.js"></script>
 <!-- bootstrap js --> 
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="JS/bootstrap.bundle.min.js"></script>
 <!-- font awesome --> 
-  <script src="js/all.js"></script>
+  <script src="JS/all.js"></script>
      
 </body>
 </html>
