--- a/yearbook.htm
+++ b/yearbook.htm
@@ -569,7 +569,7 @@
   </div>
 </div>
 
-<script src="js/yearbook-script.js"></script>
+<script src="JS/yearbook-script.js"></script>
 
   </body>
 </html>
