--- a/yearbook.htm
+++ b/yearbook.htm
@@ -13,7 +13,7 @@
 
 <img src="yearbook-img/grey eagle.png" class="img2">
 
-<h1 class="two">Yearbook Page Photos</h1>
+<h1 class="two">Random Yearbook Page Photos</h1>
 
 <div class="container">
   <div class="mySlides">
