--- a/index.htm
+++ b/index.htm
@@ -172,7 +172,7 @@
   <h1 class="section-title_name bell-fonts">about</h1>
   <div class="section-title_underline"></div>
   <p class="section-title_text">Rocky Gap is an unincorporated small town located in
-   Bland County Virginia in the south western part of Virginia. As of 2016, it is 
+   Bland County Virginia located in the south western part of the state. As of 2016, it is 
    estimated that a total of 511 people live in Rocky Gap. The town is connected to 
    neighboring Bluefield, WV by the East River Mountain Tunnel, which takes interstate
    77 beneath East River Mountain. Rocky Gap is also known by area fishermen for it's 
