--- a/photos.htm
+++ b/photos.htm
@@ -339,6 +339,24 @@
   </div>
 </div>
 <!-- end of single photo -->
+  
+<!-- single photo -->
+<div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
+<div class="card single-photo">
+  <div class="img-container">
+    <a href="img/fall6.jpg" target="_blank">
+    <img src="img/fall6.jpg" class="card-img-top photo-img" alt="">
+    </a>
+    </div>
+    <div class="card-body">
+      <div class="card-text d-flex justify-content-between text-capitalize">
+        <h5>Route 52</h5>
+        <h5>October 2017</h5>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of single photo -->
 
 <!-- single photo -->
 <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
