--- a/photos.htm
+++ b/photos.htm
@@ -435,7 +435,7 @@
 </section>
 <!-- end of photo section -->
 
-<!-- Vintage section -->
+<!-- Vintage Photo section -->
 <section id="gallery" class="gallery-bg py-5">
   <div class="container">
 <!-- section title -->
@@ -447,7 +447,8 @@
    </div>
 <!-- end section title -->
 
-<div class="row photo-items" id="photo-items">
+<!-- Photos -->
+<div class="row photo-items">
 <!-- single photo -->
 <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
 <div class="card single-photo">
@@ -456,9 +457,10 @@
     <img src="img/carrolls.jpg" class="card-img-top photo-img" alt="">
     </a>
     </div>
-    <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
-        <h5>Carrolls Grocery</h5>
+    <div class="vintage-card-body">
+      <div class="text-center text-capitalize">
+        <h5>Carroll's Grocery</h5>
+        <p>Photo Credit: Unknown</p>
       </div>
     </div>
   </div>
@@ -469,13 +471,32 @@
 <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
 <div class="card single-photo">
   <div class="img-container">
-    <a href="img/1978.jpg" target="_blank">
-    <img src="img/1978.jpg" class="card-img-top photo-img" alt="">
+    <a href="img/carrolls-2.png" target="_blank">
+    <img src="img/carrolls-2.jpg" class="card-img-top photo-img" alt="">
     </a>
     </div>
-    <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
-        <h5>Rocky Gap High School</h5>
+    <div class="vintage-card-body">
+      <div class="text-center text-capitalize">
+        <h5>Carroll's Grocery</h5>
+        <p>Photo Credit: Unknown</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of single photo -->
+
+<!-- single photo -->
+<div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
+<div class="card single-photo">
+  <div class="img-container">
+    <a href="img/carrolls-3.jpg" target="_blank">
+    <img src="img/carrolls-4.jpg" class="card-img-top photo-img" alt="">
+    </a>
+    </div>
+    <div class="vintage-card-body">
+      <div class="text-center text-capitalize">
+        <h5>Carroll's Grocery</h5>
+        <p>Photo Credit: Unknown</p>
       </div>
     </div>
   </div>
@@ -490,9 +511,46 @@
     <img src="img/restaurant.jpg" class="card-img-top photo-img" alt="">
     </a>
     </div>
-    <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
-        <h5>Eagle's Nest</h5>
+    <div class="vintage-card-body">
+      <div class="text-center text-capitalize">
+        <h5>Eagle's Nest Restaurant</h5>
+        <p>Photo Credit: Unknown</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of single photo -->
+
+<!-- single photo -->
+<div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
+<div class="card single-photo">
+  <div class="img-container">
+    <a href="img/arcade.png" target="_blank">
+    <img src="img/arcade.jpg" class="card-img-top photo-img" alt="">
+    </a>
+    </div>
+    <div class="vintage-card-body">
+      <div class="text-center text-capitalize">
+        <h5>Arcade Building</h5>
+        <p>Photo Credit: Unknown</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of single photo -->
+
+<!-- single photo -->
+<div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
+<div class="card single-photo">
+  <div class="img-container">
+    <a href="img/school.jpg" target="_blank">
+    <img src="img/school.jpg" class="card-img-top photo-img" alt="">
+    </a>
+    </div>
+    <div class="vintage-card-body">
+      <div class="text-center text-capitalize">
+        <h5>Rocky Gap High School</h5>
+        <p>Photo Credit: Unknown</p>
       </div>
     </div>
   </div>
