--- a/yearbook.htm
+++ b/yearbook.htm
@@ -567,6 +567,11 @@
       <img class="demo cursor" src="yearbook-img/1990.jpg" onclick="currentSlide(66)" alt="Rocky Gap High School 1990">
     </div>
   </div>
+  <div class="yearbooks-link">
+    <button class="link-btn">
+    <a href="https://www.blandcountyhistsoc.org/Yearbooks/YBIndexRG.html" target="_blank">Find More Here</a>
+    </button>
+  </div>
 </div>
 
 <script src="JS/yearbook-script.js"></script>
