--- a/index.htm
+++ b/index.htm
@@ -37,10 +37,15 @@
        home
     </a>
    </li>
-   <li class="nav-item">
-      <a href="https://www.blandcountyva.gov/events/" target="_blank" class="nav-link">
+   <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="https://www.blandcountyva.gov/events/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" target="_blank" class="nav-link">
        community
     </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <a class="dropdown-item" href="https://www.firedepartment.net/directory/virginia/bland-county/rocky-gap/rocky-gap-volunteer-fire-department" target="_blank">Fire Department</a>
+      <a class="dropdown-item" href="https://tools.usps.com/find-location.htm?location=1379720" target="_blank">Post Office</a>
+      <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
+    </div>
    </li>
    <li class="nav-item">
       <a href="https://www.bland.k12.va.us/" target="_blank" class="nav-link">
