--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
     </a>
    </li>
    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" target="_blank" class="nav-link">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" target="_blank" class="nav-link">
        community
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
