--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 <!-- main css -->
   <link rel="stylesheet" href="css/main.css">
 
-  <title>Rocky Gap Virginia</title>
+  <title>Rocky Gap, Virginia</title>
 </head>
 
 <body>
