--- a/index.htm
+++ b/index.htm
@@ -7,13 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <! bootstrap css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-<! -- font awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-  crossorigin="anonymous">
 <!-- main css -->
   <link rel="stylesheet" href="css/main.css">
-
+<! -- font awesome -->
+  <script src="js/all.js"></script>
   <title>Rocky Gap, Virginia</title>
 </head>
 
@@ -33,30 +30,37 @@
 <div class="collapse navbar-collapse" id="myNav">
   <ul class="navbar-nav mx-auto">
     <li class="nav-item active">
-      <a href="#navBar" class="nav-link">
+      <a href="index.htm" class="nav-link">
        home
     </a>
    </li>
-   <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" target="_blank" class="nav-link">
-       community
-    </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-      <a class="dropdown-item" href="https://www.firedepartment.net/directory/virginia/bland-county/rocky-gap/rocky-gap-volunteer-fire-department" target="_blank">Fire Department</a>
-      <a class="dropdown-item" href="https://tools.usps.com/find-location.htm?location=1379720" target="_blank">Post Office</a>
-      <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
-    </div>
-   </li>
    <li class="nav-item">
-      <a href="https://www.bland.k12.va.us/" target="_blank" class="nav-link">
+    <a href="community.htm" class="nav-link">
+     community
+  </a>
+ </li>
+   <li class="nav-item">
+      <a href="education.htm" class="nav-link">
        education
     </a>
    </li>
    <li class="nav-item">
-      <a href="https://www.blandcountyva.gov/page/government/" target=_blank" class="nav-link">
+      <a href="government.htm" class="nav-link">
        government
     </a>
    </li>
+   <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     links
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
+    <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
+    <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
+    <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
+    <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
+  </div>
+    </li>
   </ul>
  <!-- social icons -->
 <div class="nav-icons d-none d-lg-block">
@@ -143,8 +147,8 @@
   <div class="attraction-underline"></div>
   <p class="paragraph">Most of the shopping centers can be found over the mountain along
   Route 460 in neighboring Bluefield WV and Bluefield VA. The Walmart and Lowes plazas 
-  can be found going west in the Virginia side and the Mercer Mall can be found going the
-  east direction in the West Virginia side.</p>
+  can be found going west into the Virginia side and the Mercer Mall can be found going the
+  east direction into the West Virginia side.</p>
 </div>
 <!-- end of single attraction -->
 
@@ -187,7 +191,7 @@
 </div>
 <!-- second child -->
 <div class="about_img">
-  <img src="img/Rocky Gap 52.jpg" class="about_img-item" alt="about-img">
+  <img src="img/Rocky Gap 52.jpg" class="about_img-item" alt="history-img">
  </div>
 </article>
 <!-- end of about container -->
@@ -224,7 +228,7 @@
 <!-- end of photo background section -->
 
 <!-- footer -->
-<footer class="footer py-5">
+<footer class="footer py-4">
   <div class="footer-icons d-flex justify-content-around">
     <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="footer-icon">
       <i class="fab fa-facebook"></i>
@@ -245,11 +249,9 @@
 </footer>
 
 <! -- jquery -->
-  <script src="JS/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
 <!-- bootstrap js --> 
-  <script src="JS/bootstrap.bundle.min.js"></script>
-<!-- font awesome --> 
-  <script src="JS/all.js"></script>
-     
+  <script src="js/bootstrap.bundle.min.js"></script>
+<!-- script js --> 
 </body>
 </html>
