--- a/photos.htm
+++ b/photos.htm
@@ -339,25 +339,25 @@
   </div>
 </div>
 <!-- end of single photo -->
-  
+
 <!-- single photo -->
 <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
-<div class="card single-photo">
-  <div class="img-container">
-    <a href="img/fall6.jpg" target="_blank">
-    <img src="img/fall6.jpg" class="card-img-top photo-img" alt="">
-    </a>
-    </div>
-    <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
-        <h5>Route 52</h5>
-        <h5>October 2017</h5>
+  <div class="card single-photo">
+    <div class="img-container">
+      <a href="img/fall6.jpg" target="_blank">
+      <img src="img/fall6.jpg" class="card-img-top photo-img" alt="">
+      </a>
+      </div>
+      <div class="card-body">
+        <div class="card-text d-flex justify-content-between text-capitalize">
+          <h5>Route 52</h5>
+          <h5>October 2017</h5>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- end of single photo -->
-
+  <!-- end of single photo -->
+  
 <!-- single photo -->
 <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3">
 <div class="card single-photo">
@@ -563,15 +563,16 @@
 <!-- end of photo section -->
 
 <!-- Yearbook section -->
-<section id="gallery" class="store py-5">
+<section id="gallery" class="store py-3">
   <div class="container">
+    <img src="img/hs.jpg" class="hs-img">
 <!-- section title -->
 <div class="row">
   <div class="col-10 mx-auto col-sm-6 text-center">
-    <h1 class="text-capitalize">yearbook <strong
-    class="banner-title">photos</strong></h1>
-     </div>
-   </div>
+    <h1 class="text-capitalize text-white">yearbook <strong
+    class="banner-title text-dark">photos</strong></h1>
+  </div>
+</div>
 <div class="yearbook">
 <a href="yearbook.htm" target="_blank" class="book-icon">
     <i class="fas fa-book"></i>
