--- a/yearbook.htm
+++ b/yearbook.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 
 <img src="yearbook-img/grey eagle.png" class="img2">
 
-<h1 class="two">Yearbook Photos</h1>
+<h1 class="two">Random Yearbook Photos</h1>
 
 <div class="container">
   <div class="mySlides">
@@ -574,7 +574,7 @@
   </div>
 </div>
 
-<script src="JS/yearbook-script.js"></script>
+<script src="js/yearbook-script.js"></script>
 
   </body>
 </html>
