--- a/education.htm
+++ b/education.htm
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/main.css">
 <! -- font awesome -->
   <script src="js/all.js"></script>
-  <title>Rocky Gap, Virginia</title>
+  <title>Rocky Gap, Virginia Education</title>
 </head>
 
 <body>
