--- a/yearbook.htm
+++ b/yearbook.htm
@@ -572,6 +572,7 @@
     <a href="https://www.blandcountyhistsoc.org/Yearbooks/YBIndexRG.html" target="_blank">Find More Here</a>
     </button>
   </div>
+  <img src="img/eagles logo.jpg">
 </div>
 
 <script src="js/yearbook-script.js"></script>
