--- a/government.htm
+++ b/government.htm
@@ -93,7 +93,7 @@
         </div>
         <div class="intro-text">
            <h3>Officials</h3>
-           <p><span class="bold">Bland County Administrator's Office:</span> (276) 688-4622</p>
+           <p><span class="bold">Administrator's Office:</span> (276) 688-4622</p>
            <p><span class="bold">Commonwealth's Attourney:</span> (276) 688-3821</p>
            <p><span class="bold">Clerk of Circuit Court:</span> (276) 688-4562</p>
            <p><span class="bold">Commissioner of the Revenue:</span> (276) 688-4291</p>
