--- a/community.htm
+++ b/community.htm
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="logo-img">
-       <img src="img/logo.png">
+       <img src="img/logo-2.png">
     </div>
     <div class="info-section2">
         <div class="card">
