--- a/education.htm
+++ b/education.htm
@@ -87,7 +87,7 @@
       <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=310940&type=d" target="_blank">Website</a>
     </button>
   <div class="schools-img">
-     <img src="img/fall4.jpg">
+     <img src="img/school-2.jpg">
      <img src="img/Rocky Gap Elementary.jpg">
    </div>
    <div class="info-text">
