--- a/photos.htm
+++ b/photos.htm
@@ -43,9 +43,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Old Bank Building</h5>
-        <h5>March 2013</h5>
+        <p>March 2013</p>
       </div>
     </div>
   </div>
@@ -61,9 +61,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Old Bank Building</h5>
-        <h5>March 2013</h5>
+        <p>March 2013</p>
       </div>
     </div>
   </div>
@@ -79,9 +79,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>School Building</h5>
-        <h5>March 2013</h5>
+        <p>March 2013</p>
       </div>
     </div>
   </div>
@@ -97,9 +97,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Downtown</h5>
-        <h5>March 2013</h5>
+        <p>March 2013</p>
       </div>
     </div>
   </div>
@@ -115,9 +115,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Methodist Church</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -133,9 +133,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Downtown</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -151,9 +151,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>playground</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -169,9 +169,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>High School</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -187,9 +187,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>School Building</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -205,9 +205,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Route 52</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -223,9 +223,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Scenery</h5>
-        <h5>June 2013</h5>
+        <p>June 2013</p>
       </div>
     </div>
   </div>
@@ -241,9 +241,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>High School</h5>
-        <h5>August 2013</h5>
+        <p>August 2013</p>
       </div>
     </div>
   </div>
@@ -259,9 +259,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Route 52</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -277,9 +277,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>School Building</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -295,9 +295,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Scenery</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -313,9 +313,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>High School</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -331,9 +331,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Route 52</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -349,9 +349,9 @@
       </a>
       </div>
       <div class="card-body">
-        <div class="card-text d-flex justify-content-between text-capitalize">
+        <div class="text-center text-capitalize">
           <h5>Route 52</h5>
-          <h5>October 2017</h5>
+          <p>October 2017</p>
         </div>
       </div>
     </div>
@@ -367,9 +367,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Downtown</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -385,9 +385,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>School Building</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -403,9 +403,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Rocky Gap VA</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
@@ -421,9 +421,9 @@
     </a>
     </div>
     <div class="card-body">
-      <div class="card-text d-flex justify-content-between text-capitalize">
+      <div class="text-center text-capitalize">
         <h5>Old Bank Building</h5>
-        <h5>October 2017</h5>
+        <p>October 2017</p>
       </div>
     </div>
   </div>
