--- a/community.htm
+++ b/community.htm
@@ -114,7 +114,7 @@
         </div>
     </div>
     <div class="logo-img">
-       <img src="img/logo-3.png">
+       <img src="img/logo-3.jpg">
     </div>
     <div class="info-section2">
         <div class="card">
