--- a/community.htm
+++ b/community.htm
@@ -32,27 +32,32 @@
     <li class="nav-item active">
       <a href="index.htm" class="nav-link">
        home
-    </a>
-   </li>
+      </a>
+    </li>
    <li class="nav-item">
     <a href="community.htm" class="nav-link">
      community
-  </a>
- </li>
+    </a>
+   </li>
    <li class="nav-item">
       <a href="education.htm" class="nav-link">
        education
-    </a>
+      </a>
    </li>
    <li class="nav-item">
       <a href="government.htm" class="nav-link">
        government
+      </a>
+   </li>
+    <li class="nav-item">
+    <a href="photos.htm" class="nav-link" target="_blank">
+     gallery
     </a>
    </li>
    <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
      links
-  </a>
+    </a>
   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
     <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
