--- a/photos.htm
+++ b/photos.htm
@@ -62,7 +62,7 @@
     </div>
     <div class="card-body">
       <div class="text-center text-capitalize">
-        <h5>Old Bank Building</h5>
+        <h5>Downtown</h5>
         <p>March 2013</p>
       </div>
     </div>
